--- a/ShoppingCartServiceLibrary/App.config
+++ b/ShoppingCartServiceLibrary/App.config
@@ -1,6 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
+  <configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  </configSections>
+  <connectionStrings>
+    <!--<add name="ShoppingCartContext" connectionString="Data Source=C:\\S\\Git\\Project3\\ShoppingCartServiceLibrary\\ShoppingCartDatabase.sdf" providerName="System.Data.SqlServerCe.4.0" />-->
+    <!--<add name="ShoppingCartContext" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Database=ShoppingCartStateDB;Trusted_Connection=true;" />-->
+  </connectionStrings>
   <system.web>
     <compilation debug="true" />
   </system.web>
@@ -40,48 +46,21 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://webservices.amazon.com/onca/soap?Service=AWSECommerceService"
-        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding"
-        contract="AWSECommerceServiceProxy.AWSECommerceServicePortType"
-        name="AWSECommerceServicePort" />
-      <endpoint address="https://webservices.amazon.ca/onca/soap?Service=AWSECommerceService"
-        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding1"
-        contract="AWSECommerceServiceProxy.AWSECommerceServicePortType"
-        name="AWSECommerceServicePortCA" />
-      <endpoint address="https://webservices.amazon.cn/onca/soap?Service=AWSECommerceService"
-        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding2"
-        contract="AWSECommerceServiceProxy.AWSECommerceServicePortType"
-        name="AWSECommerceServicePortCN" />
-      <endpoint address="https://webservices.amazon.de/onca/soap?Service=AWSECommerceService"
-        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding3"
-        contract="AWSECommerceServiceProxy.AWSECommerceServicePortType"
-        name="AWSECommerceServicePortDE" />
-      <endpoint address="https://webservices.amazon.fr/onca/soap?Service=AWSECommerceService"
-        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding4"
-        contract="AWSECommerceServiceProxy.AWSECommerceServicePortType"
-        name="AWSECommerceServicePortFR" />
-      <endpoint address="https://webservices.amazon.it/onca/soap?Service=AWSECommerceService"
-        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding5"
-        contract="AWSECommerceServiceProxy.AWSECommerceServicePortType"
-        name="AWSECommerceServicePortIT" />
-      <endpoint address="https://webservices.amazon.co.jp/onca/soap?Service=AWSECommerceService"
-        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding6"
-        contract="AWSECommerceServiceProxy.AWSECommerceServicePortType"
-        name="AWSECommerceServicePortJP" />
-      <endpoint address="https://webservices.amazon.co.uk/onca/soap?Service=AWSECommerceService"
-        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding7"
-        contract="AWSECommerceServiceProxy.AWSECommerceServicePortType"
-        name="AWSECommerceServicePortUK" />
-      <endpoint address="https://webservices.amazon.com/onca/soap?Service=AWSECommerceService"
-        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding8"
-        contract="AWSECommerceServiceProxy.AWSECommerceServicePortType"
-        name="AWSECommerceServicePortUS" />
+      <endpoint address="https://webservices.amazon.com/onca/soap?Service=AWSECommerceService" binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding" contract="AWSECommerceServiceProxy.AWSECommerceServicePortType" name="AWSECommerceServicePort" />
+      <endpoint address="https://webservices.amazon.ca/onca/soap?Service=AWSECommerceService" binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding1" contract="AWSECommerceServiceProxy.AWSECommerceServicePortType" name="AWSECommerceServicePortCA" />
+      <endpoint address="https://webservices.amazon.cn/onca/soap?Service=AWSECommerceService" binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding2" contract="AWSECommerceServiceProxy.AWSECommerceServicePortType" name="AWSECommerceServicePortCN" />
+      <endpoint address="https://webservices.amazon.de/onca/soap?Service=AWSECommerceService" binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding3" contract="AWSECommerceServiceProxy.AWSECommerceServicePortType" name="AWSECommerceServicePortDE" />
+      <endpoint address="https://webservices.amazon.fr/onca/soap?Service=AWSECommerceService" binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding4" contract="AWSECommerceServiceProxy.AWSECommerceServicePortType" name="AWSECommerceServicePortFR" />
+      <endpoint address="https://webservices.amazon.it/onca/soap?Service=AWSECommerceService" binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding5" contract="AWSECommerceServiceProxy.AWSECommerceServicePortType" name="AWSECommerceServicePortIT" />
+      <endpoint address="https://webservices.amazon.co.jp/onca/soap?Service=AWSECommerceService" binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding6" contract="AWSECommerceServiceProxy.AWSECommerceServicePortType" name="AWSECommerceServicePortJP" />
+      <endpoint address="https://webservices.amazon.co.uk/onca/soap?Service=AWSECommerceService" binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding7" contract="AWSECommerceServiceProxy.AWSECommerceServicePortType" name="AWSECommerceServicePortUK" />
+      <endpoint address="https://webservices.amazon.com/onca/soap?Service=AWSECommerceService" binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding8" contract="AWSECommerceServiceProxy.AWSECommerceServicePortType" name="AWSECommerceServicePortUS" />
     </client>
     <services>
       <service name="ShoppingCartServiceLibrary.ShoppingCartService">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8733/Design_Time_Addresses/ShoppingCartServiceLibrary/ShoppingCartService/"   />
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/ShoppingCartServiceLibrary/ShoppingCartService/" />
           </baseAddresses>
         </host>
         <!-- Service Endpoints -->
@@ -93,13 +72,13 @@
               automatically.
           -->
           <identity>
-            <dns value="localhost"/>
+            <dns value="localhost" />
           </identity>
         </endpoint>
         <!-- Metadata Endpoints -->
-        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. --> 
+        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. -->
         <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
     </services>
     <behaviors>
@@ -107,14 +86,31 @@
         <behavior>
           <!-- To avoid disclosing metadata information, 
           set the value below to false before deployment -->
-          <serviceMetadata httpGetEnabled="True"/>
+          <serviceMetadata httpGetEnabled="True" />
           <!-- To receive exception details in faults for debugging purposes, 
           set the value below to true.  Set to false before deployment 
           to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="False" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
   </system.serviceModel>
-
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data.SqlServerCe" publicKeyToken="89845dcd8080cc91" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlCeConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="System.Data.SqlServerCe.4.0" />
+      </parameters>
+    </defaultConnectionFactory>
+  </entityFramework>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0.3" />
+  </startup>
 </configuration>
