--- a/Project3WebHost/Project3WebHost.csproj
+++ b/Project3WebHost/Project3WebHost.csproj
@@ -109,7 +109,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Properties\PublishProfiles\ASU Debug.pubxml" />
     <None Include="Properties\PublishProfiles\ASU Release.pubxml" />
   </ItemGroup>
